Fix wrong color usage on date-selector background

--- a/utils/date-selector.scss
+++ b/utils/date-selector.scss
@@ -1,5 +1,5 @@
 .date-selector-dropdown {
-  background-color: $emphasis-color;
+  background-color: $main-color;
 }
 
 .date-selector-dropdown__item.date-selector-dropdown__item--selected {
